# cc-session-control

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-testpypi.yml  release.yml
docs/: releasing.md
scripts/: bump_version.py
src/cc_session_control/: __init__.py  __main__.py  app.py  cli.py  clipboard.py  config.py  models.py
src/cc_session_control/actions/: agent_ops.py  rc_ops.py  session_ops.py
src/cc_session_control/data/: agents.py  cleanup.py  environments.py  liveness.py  proc.py  rc.py  registry.py  sessions.py  snapshot.py
src/cc_session_control/views/: _session_row.py  agents.py  cleanup.py  rc.py  sessions.py
tests/: test_agent_ops.py  test_agents.py  test_app.py  test_cleanup.py  test_cli.py  test_data.py  test_environments.py  test_liveness.py  test_proc.py  test_rc.py  test_registry.py  test_sessions.py  test_smoke.py  test_snapshot.py  test_views.py
